--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <div id="content"></div>
-    <script src="./dist/js/comment/comment.js"></script>
+    <script src="./dist/js/comment/app.js"></script>
 </body>
 </html>
