--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="./dist/css/comment.css">
+    <script src="http://localhost:35729/livereload.js"></script>
 </head>
 <body>
     <div class="container">
         <div id="content" class="row"></div>
     </div>
     <div class="container">
+
         <button type="button" id="btn-1" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
             Launch demo modal
         </button>
@@ -21,7 +23,8 @@
                         <h4 class="modal-title" id="myModalLabel">Modal title</h4>
                     </div>
                     <div class="modal-body">
-                        456123546
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="ion-arrow-down-a"></span>456123546
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
