--- a/index.html
+++ b/index.html
@@ -3,38 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="./dist/css/comment.css">
-    <script src="http://localhost:35729/livereload.js"></script>
 </head>
 <body>
-    <div class="container">
-        <div id="content" class="row"></div>
-    </div>
-    <div class="container">
-
-        <button type="button" id="btn-1" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-            Launch demo modal
-        </button>
-        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-                    </div>
-                    <div class="modal-body">
-                        <span class="glyphicon glyphicon-star"></span>
-                        <span class="ion-arrow-down-a"></span>456123546
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="./dist/js/vendors.js"></script>
-    <script src="./dist/js/comment/app.js"></script>
+    <h1>Hello world!</h1>
 </body>
 </html>
